@@ -14,4 +14,6 @@ java -Djdk.security.auth.subject.getSubject.useAccessController=true \
      --add-opens=java.base/sun.security.action=ALL-UNNAMED \
      --add-opens=java.base/sun.util.calendar=ALL-UNNAMED \
      --add-opens=java.security.jgss/sun.security.krb5=ALL-UNNAMED \
+     --add-opens=java.base/javax.security.auth=ALL-UNNAMED \
+     -javaagent:target/java-25-kafka-streams-windoning-eo-purchases-1.0-SNAPSHOT-agent.jar \
      -jar target/java-25-kafka-streams-windoning-eo-purchases-1.0-SNAPSHOT.war
